# pollinet

./: .env.example  .gitignore  ANDROID_IMPLEMENTATION_SUMMARY.md  BLE_BROADCASTING_COMPLETE.md  BLE_CONNECTION_TEST_GUIDE.md  BLE_MESH_TESTING_GUIDE.md  BLE_PHASE2_COMPLETE.md  BROADCAST_UI_COMPLETE.md  BUILD_SUCCESS.md  CI_CD_SETUP_SUMMARY.md  CLI_QUICKSTART.md  CURRENT_STATUS_AND_NEXT_STEPS.md  Cargo.toml  DATA_TRANSMISSION_STATUS.md  DISCOVERY_AUDIT_REPORT.md  DISCOVERY_FINAL_STATUS.md  EXPLANATION.md  FFI_TEST_RESULTS.md  FINAL_SOLUTION_BROADCAST_MODE.md  FIXED_NONCE_WORKFLOW.md  GATT_SERVER_IMPLEMENTATION_PLAN.md  GATT_SERVER_TEST_GUIDE.md  GATT_SESSION_TIMEOUTS.md  HANDSHAKE_TEST_GUIDE.md  IMPLEMENTATION_COMPLETE.md  ISSUE_RESOLVED_MTU_FIX.md  M1_DEMO_RESULTS.md  M1_REPRODUCIBILITY_GUIDE.md  MESH_HEALTH_MONITOR_COMPLETE.md  MTU_ISSUE_AND_FIX.md  MWA_IMPLEMENTATION_STATUS.md  MWA_INTEGRATION_PROGRESS.md  MWA_NONCE_CREATION_GUIDE.md  MWA_QUICK_START.md  MWA_TESTING_GUIDE.md  OFFLINE_BUNDLE_DEMO_COMPLETE.md  OFFLINE_BUNDLE_IMPLEMENTATION.md  OFFLINE_TRANSACTIONS_GUIDE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  (+42 more)
.cargo/: config.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  rust.yml  security.yml
benches/: ble_performance.rs  compression_benchmark.rs
demo_files/: config.json  peers.json
docs/: BLE_MESH_IMPLEMENTATION_STATUS.md  BLE_MESH_PROTOCOL.md  BUGFIX_SDK_NULL.md  BUILD_VERIFICATION.md  CRITICAL_FIXES_COMPLETE.md  DUPLICATE_CHECK_ANALYSIS.md  EDGE_CASES_AND_RECOMMENDATIONS.md  FINAL_SUMMARY.md  FIX_001_SUMMARY.md  FIX_003_SUMMARY.md  FIX_005_SUMMARY.md  FIX_008_SUMMARY.md  IMPLEMENTATION_TRACKER.md  IOS_SDK_IMPLEMENTATION_GUIDE.md  PROCESS_OUTBOUND_QUEUE_IMPLEMENTATION.md  README.md  README_FIXES.md  TESTING.md  TRANSACTION_FLOW_DEMO.md  WEEK1_COMPLETION_REPORT.md
examples/: QUEUE_FLOW_REFERENCE.md  README.md  README_BLE.md  TRANSACTION_FRAGMENT_STORAGE_ANALYSIS.md  VIEWING_RUST_LOGS_ANDROID.md  ble_mesh_simulation.rs  cast_governance_vote.rs  cast_unsigned_vote.rs  create_nonce_transaction.rs  create_spl_nonce_transaction.rs  create_unsigned_spl_transaction.rs  create_unsigned_transaction.rs  file_service_demo.rs  linux_gatt_server.rs  m1_demo_50_transactions.rs  nonce_bundle_helper.rs  nonce_refresh_utility.rs  offline_bundle_management.rs  offline_transaction_flow.rs  offline_transaction_receiver.rs  offline_transaction_sender.rs  pollinet_message_example.rs  relay_presigned_transaction.rs  simple_ble_test.rs  simple_file_demo.rs  test_ble_functionality.rs  test_spl_transaction.rs  text_message_test.rs  transaction_flow_test.rs  wallet_utils.rs
pollinet-android/: FIX_021_SUMMARY.md  SDK_NULL_TROUBLESHOOTING.md  SETUP.md  WEEK1_PROGRESS_SUMMARY.md  build.gradle.kts  gradle.properties  settings.gradle.kts
pollinet-android/.cargo/: config.toml
pollinet-android/app/: build.gradle.kts
pollinet-android/gradle/: libs.versions.toml
pollinet-android/pollinet-sdk/: build.gradle.kts
pollinet-ios/: ALL_CODE_COMPLETE_FINAL.md  ANDROID_SAFETY_VERIFICATION.md  ANDROID_TEST_COMMANDS.md  BLUER_FIX.md  BUILD_FIX_SUMMARY.md  BUILD_OPENSSL_FIX.md  BUILD_STATUS.md  BUILD_STATUS_FINAL.md  BUILD_SUCCESS.md  BUILD_TROUBLESHOOTING.md  CHANGES_SUMMARY.md  COMPREHENSIVE_RPC_FIX_NEEDED.md  FINAL_BUILD_STATUS.md  FINAL_COMPLETE_STATUS.md  FINAL_FIX_APPROACH.md  FINAL_IOS_SDK_STATUS.md  FINAL_SOLUTION.md  FINAL_STATUS.md  FINAL_STATUS_ALL_DONE.md  HOW_TO_FIX_OPENSSL.md  IOS_BLE_FUNCTIONS_NOT_NEEDED.md  IOS_BUILD_COMPLETE_SUMMARY.md  NEXT_STEPS.md  NEXT_STEPS_FOR_USER.md  OPENSSL_LINKER_ISSUE.md  PolliNetFFI.h  QUICK_START.md  README.md  README_FIRST.md  RPC_FIX_COMPLETE.md  SUCCESS_ALL_CODE_COMPLETE.md
pollinet-ios/pollinet-ios/: ContentView.swift  Item.swift  PolliNetSDK.swift  pollinet-ios-Bridging-Header.h  pollinet_iosApp.swift
pollinet-ios/pollinet-ios.xcodeproj/: project.pbxproj
pollinet-ios/pollinet-iosTests/: pollinet_iosTests.swift
pollinet-ios/pollinet-iosUITests/: pollinet_iosUITests.swift  pollinet_iosUITestsLaunchTests.swift
pollinet-sdk/: build.gradle.kts  gradle.properties  settings.gradle.kts
pollinet-sdk-ios/: .gitignore  Package.swift
pollinet-sdk-ios/scripts/: build-xcframework.sh
pollinet-sdk/pollinet-sdk/: build.gradle.kts  proguard-rules.pro
scripts/: README.md  pollinet_cli.sh  test_jitpack_build.sh  test_pollinet.sh
src/: lib.rs  main.rs  storage.rs
src/ble/: adapter.rs  android.rs  bridge.rs  broadcaster.rs  control_frames.rs  density.rs  fragmenter.rs  gatt_server.rs  gatt_service.rs  health_monitor.rs  linux.rs  macos.rs  mesh.rs  mod.rs  peer_manager.rs  windows.rs
src/ffi/: android.rs  ios.rs  (+9 more)
temp_files/: data.json  test.txt
tests/: integration_tests.rs  mesh_simulation.rs  unit_tests.rs
untitled folder/: complete_gatt_callback.kt  gatt_callback_fix.kt
(+76 files in other folders)
