[package]
name = "pollinet"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22.1"
bincode = "2.0.1"
bincode1 = { package = "bincode", version = "1.3" }
bs58 = "0.5"
btleplug = "0.11.8"
uuid = { version = "1.0", features = ["v4"] }
config = "0.15.13"
dotenv = "0.15.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lz4 = "1.24"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
solana-account-decoder = "2.3.0"
solana-client = "2.3.0"
solana-sdk = "2.3.0"
solana-program = "2.3.0"
spl-associated-token-account = "4.0"
spl-token = "4.0"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full", "signal"] }
tracing = "0.1.41"
tracing-subscriber = "0.3"
