[package]
name = "pollinet"
version = "0.1.0"
edition = "2021"

[lib]
name = "pollinet"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
anyhow = "1.0"
base64 = "0.22.1"
bincode = "2.0.1"
bincode1 = { package = "bincode", version = "1.3" }
bs58 = "0.5"
btleplug = { version = "0.11.8", optional = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
config = { version = "0.15.13", optional = true }
dotenv = "0.15.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lz4 = "1.24"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
solana-account-decoder = { version = "2.3.0", optional = true }
solana-client = { version = "2.3.0", optional = true }
# iOS: enable full feature for signature and transaction types
solana-sdk = { version = "2.3.0", default-features = false, features = ["full"] }
solana-program = { version = "2.3.0", default-features = false }
spl-associated-token-account = { version = "4.0", default-features = false, features = ["no-entrypoint"] }
spl-token = { version = "4.0", default-features = false, features = ["no-entrypoint"] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "sync", "time", "macros", "io-util", "fs", "net"] }
tracing = "0.1.41"
tracing-subscriber = "0.3"
rand = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
bluer = { version = "0.16", optional = true, features = ["bluetoothd"] }
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"

# FFI dependencies for Android
jni = { version = "0.21", optional = true }
once_cell = "1.19"
parking_lot = "0.12"
lazy_static = "1.4"
log = "0.4"
android_logger = { version = "0.14", optional = true }

[features]
default = ["rpc-client", "ble", "config-file"]
linux = ["ble"]
macos = ["ble"]
windows = ["ble"]
android = ["jni", "android_logger", "rpc-client", "ble", "config-file"]
ios = []
rpc-client = ["solana-client", "solana-account-decoder"]
ble = ["btleplug"]
config-file = ["config"]

# Platform-specific OpenSSL configuration
[target.'cfg(not(target_os = "ios"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(target_os = "ios")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
tempfile = "3.8"